# chatscope

./: .gitignore  LICENSE  MANIFEST.in  README.md  api_test_results.json  chat_analyzer.py  conversations_example.json  example_usage.py  github_test_results.json  pyproject.toml  requirements.txt  setup.py  test_advanced_features.py  test_library.py
.github/workflows/: publish.yml
chatscope/: __init__.py  advanced_analyzer.py  advanced_cli.py  cli.py
docs/: API_REFERENCE.md  EXAMPLES.md  USER_GUIDE.md  _config.yml  index.md
