[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "chatscope"
version = "2.0.0"
authors = [
    {name = "22smeargle", email = "plus4822@icloud.com"},
]
description = "Analyze and categorize ChatGPT conversation exports using OpenAI API"
readme = "README.md"
license = {text = "Custom Non-Commercial License (CNCL) v1.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]
keywords = ["chatgpt", "openai", "conversation", "analysis", "categorization", "nlp"]
dependencies = [
    "openai>=0.28.0,<1.0.0",
    "python-dotenv>=0.19.0",
    "requests>=2.25.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "nltk>=3.7",
    "textblob>=0.17.0",
]

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "wordcloud>=1.8.0",
]
advanced = [
    "bertopic>=0.15.0",
    "transformers>=4.20.0",
    "torch>=1.12.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "bertopic>=0.15.0",
]
all = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "wordcloud>=1.8.0",
    "bertopic>=0.15.0",
    "transformers>=4.20.0",
    "torch>=1.12.0",
]

[project.urls]
"Homepage" = "https://github.com/22smeargle/chatscope"
"Bug Reports" = "https://github.com/22smeargle/chatscope/issues"
"Source" = "https://github.com/22smeargle/chatscope"
"Documentation" = "https://github.com/22smeargle/chatscope#readme"

[project.scripts]
chatscope = "chatscope.cli:main"
chatscope-advanced = "chatscope.advanced_cli:main"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["src"] by default)
include = ["chatscope*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests*"]  # exclude packages matching these glob patterns

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded by ^/ will apply only to files and directories
# in the root of the project.
^/setup.py
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]